Fix graph refresh | add overlay mode enable switch

--- a/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
@@ -3,7 +3,7 @@
 		<pressure-panel title="Pressure" [value]="pressure" icon="icon-app"></pressure-panel>
 	</div> 
 	<div class="col-12">
-		<graph title="Pressure Graf" [value]="pressure" subtitle="Don't know what to put here"></graph>
+		<graph title="Pressure Graf" [pressureArray]="pressureArray" [value]="pressure" subtitle="Don't know what to put here"></graph>
 	</div>
 	<div class="col-lg-6 col-md-12">
 		<mode-panel></mode-panel>
