--- a/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
@@ -2,6 +2,9 @@
 	<div class="col-lg-3 col-md-6">
 		<pressure-panel title="Pressure" [value]="pressure" icon="icon-app"></pressure-panel>
 	</div> 
+	<div class="col-lg-3 col-md-6">
+		<led-panel></led-panel>
+	</div> 
 	<div class="col-12">
 		<graph title="Pressure Graf" [pressureArray]="pressureArray" [value]="pressure" subtitle="Don't know what to put here"></graph>
 	</div>
