--- a/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
@@ -5,6 +5,9 @@
 	<div class="col-lg-3 col-md-6">
 		<led-panel></led-panel>
 	</div> 
+	<div class="col-lg-3 col-md-6">
+		<music-panel></music-panel>
+	</div> 
 	<div class="col-12">
 		<graph title="Pressure Graf" [pressureArray]="pressureArray" [value]="pressure" subtitle="Don't know what to put here"></graph>
 	</div>
