--- a/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="row">
 	<div class="col-lg-3 col-md-6">
 		<pressure-panel title="Pressure" [value]="pressure" icon="icon-app"></pressure-panel>
-	</div> 
+	</div>
 	<div class="col-lg-3 col-md-6">
 		<led-panel></led-panel>
-	</div> 
+	</div>
 	<div class="col-lg-3 col-md-6">
 		<music-panel></music-panel>
-	</div> 
+	</div>
 	<div class="col-12">
-		<graph title="Pressure Graf" [pressureArray]="pressureArray" [value]="pressure" subtitle="Don't know what to put here"></graph>
+		<graph title="Pressure Chart" [pressureArray]="pressureArray" [value]="pressure" subtitle="Realtime"></graph>
 	</div>
 	<div class="col-lg-6 col-md-12">
 		<mode-panel></mode-panel>
@@ -17,4 +17,4 @@
 	<div class="col-lg-6 col-md-12">
 		<overlay-panel></overlay-panel>
 	</div>
-</div>    
+</div>
