--- a/lightit-webapp/src/main/angular/lightit-webapp/src/app/components/overlay-panel/panel.component.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/app/components/overlay-panel/panel.component.html
@@ -1,9 +1,9 @@
 <div class="card">
     <div class="card-header card-header-info">
-        <h4 class="card-title">Pressure By Brightness</h4>
+        <h4 class="card-title">Brightness by Pressure</h4>
         <div class="card-toolbar">
             <label class="swithLabel">Switch mode:</label>
-            <input (change)="enablePressureMode($event)" type="checkbox" class="js-switch" /> 
+            <input (change)="enablePressureMode($event)" type="checkbox" class="js-switch" />
         </div>
     </div>
     <div class="card-body">
