--- a/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/app/app.component.html
@@ -9,7 +9,7 @@
 		<music-panel></music-panel>
 	</div> 
 	<div class="col-12">
-		<graph title="Pressure Graf" [pressureArray]="pressureArray" [value]="pressure" subtitle="Don't know what to put here"></graph>
+		<graph title="Pressure Chart" [pressureArray]="pressureArray" [value]="pressure" subtitle="Don't know what to put here"></graph>
 	</div>
 	<div class="col-lg-6 col-md-12">
 		<mode-panel></mode-panel>
