Add session manager

--- a/bublight-webapp/src/main/vue/bublight-webapp/src/scss/custom.scss
+++ b/bublight-webapp/src/main/vue/bublight-webapp/src/scss/custom.scss
@@ -36,3 +36,11 @@
     border: none;
     box-shadow: 0 4px 10px 0px rgba(0, 0, 0, 0.14), 0 7px 5px -5px rgba(0, 188, 212, 0.4);
 }
+
+.icon-small {
+    font-size: 30px !important;
+    width: 30px !important;
+    height: 30px !important;
+    line-height: 30px !important;
+    cursor: pointer;
+}
