--- a/bublight-webapp/src/main/vue/bublight-webapp/src/scss/custom.scss
+++ b/bublight-webapp/src/main/vue/bublight-webapp/src/scss/custom.scss
@@ -44,3 +44,32 @@
     line-height: 30px !important;
     cursor: pointer;
 }
+
+.disableOverlay {
+    position: absolute;
+    top: 18px;
+    right: 10px;
+}
+
+@media (max-width: 991.98px) {
+    .color-picker {
+        position: fixed !important;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .session-card {
+        .card-title {
+            .row {
+                width: 100%;
+            }
+        }
+    }
+
+    .disableOverlay {
+        position: relative;
+        top: auto;
+        right: auto;
+        text-align: center;
+    }
+}
