--- a/bublight-webapp/src/main/vue/bublight-webapp/src/scss/custom.scss
+++ b/bublight-webapp/src/main/vue/bublight-webapp/src/scss/custom.scss
@@ -51,6 +51,12 @@
     right: 10px;
 }
 
+.session-card {
+    .card-title {
+        height: 36px;
+    }
+}
+
 @media (max-width: 991.98px) {
     .color-picker {
         position: fixed !important;
@@ -60,6 +66,7 @@
 @media (max-width: 767.98px) {
     .session-card {
         .card-title {
+            height: auto;
             .row {
                 width: 100%;
             }
